stable/influxdb/0.0.1/templates/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  labels: 
    app.kubernetes.io/name: influxdb
spec: 
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: 
      app.kubernetes.io/name: influxdb
  template: 
    metadata:
      name: influxdb
      labels: 
        app.kubernetes.io/name: influxdb
    spec:
      containers:
        - name: influxdb
          image: "influxdb:2.7.4"
          imagePullPolicy: IfNotPresent
          volumeMounts: 
            - name: data
              mountPath: /var/lib/influxdb2
            - name: config-yml
              mountPath: /etc/influxdb2/config.yml
          ports:
          #- name: nats
          #  protocol: TCP
          #  containerPort: 4222
          - name: http
            protocol: TCP
            containerPort: 8086
      volumes: 
        - name: data
          hostPath:
            path: /mnt/pool/service/influxdb/data
        - name: config-yml
          hostPath:
            path: /mnt/pool/service/influxdb/config.yml
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-http
spec:
  #ipFamilyPolicy: SingleStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: influxdb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
spec:
  rules:
    - host: influxdb.bitheap.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb-http
                port:
                  name: http
